# xmr-slim

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  THIRD-PARTY-LICENSES  build.sh  install.sh  xmr-slim.service
c_blake/: c_blake256.cpp  c_blake256.h  do_blake_hash.cpp  do_blake_hash.hpp
c_cryptonight/: cryptonight.hpp  cryptonight_aesni.hpp  cryptonight_common.cpp  do_cryptonight.cpp  do_cryptonight.h  minethed_self_test.cpp  minethed_self_test.h  minethed_self_test_main.cpp
c_groestl/: c_groestl.cpp  c_groestl.hpp  do_groestl_hash.cpp  do_groestl_hash.hpp
c_hwlock/: do_hwlock.cpp  do_hwlock.hpp  hwlocMemory.cpp
c_jh/: c_jh.cpp  c_jh.hpp  do_jh_hash.cpp  do_jh_hash.hpp
c_keccak/: c_keccak.cpp  c_keccak.hpp  do_keccak_hash.cpp  do_keccak_hash.hpp
c_skein/: c_skein.cpp  c_skein.hpp  do_skein_hash.cpp  do_skein_hash.hpp
includes/: StatsdClient.cpp  StatsdClient.hpp  UDPSender.cpp  UDPSender.hpp  json.hpp.asc  statsd_test.cpp
includes/date/: README.md
monitoring/: .env  .gitignore  app.py  celeryconfig.py  requirements.txt
scripts/: count-cache-l2  count-cache-l3  count-nproc  listener.py  log_listener.py
sys_auto_adjust/: CMakeLists.txt  autoAdjust.cpp  autoAdjust.hpp  build.sh  sys_auto_adjust.hpp.in  sys_auto_adjust_main.cpp
xmrstak/: config.tpl  jconf.cpp  jconf.hpp  params.hpp  system_constants.hpp  version.cpp  version.hpp
xmrstak/backend/: backendConnector.cpp  backendConnector.hpp  cryptonight.hpp  executor.cpp  executor.hpp  globalStates.cpp  globalStates.hpp  iBackend.hpp  miner_work.hpp  minethd.cpp  plugin.hpp
xmrstak/backend/cpu/: autoAdjust.cpp  autoAdjust.hpp  autoAdjustHwloc.hpp  hwlocMemory.cpp  jconf.cpp  jconf.hpp  minethd.cpp  minethd.hpp
xmrstak/backend/cpu/crypto/: cryptonight_aesni.h  cryptonight_common.cpp
xmrstak/cli/: cli-miner.cpp  logger.cpp  logger.h  statsd.cpp  statsd.hpp
xmrstak/misc/: console.cpp  console.hpp  environment.hpp  executor.cpp  executor.hpp  telemetry.cpp
xmrstak/net/: jpsock.cpp  jpsock.hpp  jpsock_v2.cpp  jpsock_v2.hpp  msgstruct.hpp  msgstruct_v2.hpp  plain_socket.cpp  plain_socket.h  socket.cpp  socket.hpp  socks.hpp  time_utils.hpp
xmrstak/rapidjson/: document.h
